...

  return (
    <View style={styles.rootContainer}>
      <Card
        title="Bottom Sheet"
        text="fixedHeight bottom sheet"
        testID="buttonLinkedIn"
        onPress={handleOpenLinkedInModal}
      />
      <Card
        title="Bottom Sheet"
        text="Dynamic height: Sign in dialog"
        testID="buttonSignIn"
        onPress={handleOpenSmallModal}
      />
    </View>
  );
};

...
