...
          <View>
            <Text style={styles.body}>{role.company.name}</Text>
            <Text style={styles.body}>{role.company.location}</Text>
          </View>
        </View>

        <View testID="roleType">
          <View style={[styles.row, styles.spaceTop]}>
            <MIcon name="briefcase-variant" size={20} color={theme.colors.rhino} />
            <Tag text={role.roleInfo.locationType} />
            <Tag text={role.roleInfo.jobType} />
          </View>

...
