...
          <Text>{Language.EN.toUpperCase()}</Text>
        </RoundButton>
        <View style={styles.buttonSeparator} />
        <RoundButton
          onPress={() => setLocale(Language.ES)}
          isPressed={locale === Language.ES}
          testID="changeES"
          backgroundColor="white">
          <Text>{Language.ES.toUpperCase()}</Text>
        </RoundButton>
      </View>
    </View>
  );
...
